--- a/index.html
+++ b/index.html
@@ -10,5 +10,27 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+
+    <header class="header">
+      <nav class="container nav-bar">
+        <div class="nav-element-container logo">
+          <img class="nav-element" src="./img/favicon.ico" alt="logo">
+        </div>
+        <div class="nav-element-container link">
+          <a class="nav-element" href="#">link</a>
+          <a class="nav-element" href="#">link</a>
+          <a class="nav-element" href="#">link</a>
+          <a class="nav-element" href="#">link</a>
+          <a class="nav-element" href="#">link</a>
+        </div>
+        <div class="nav-element-container login">
+          <a class="nav-element" href="#">login</a>
+        </div>
+      </nav>
+    </header>
+
+
+
+  </body>
 </html>
