--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
           <a class="nav-element" href="#">login</a>
         </div>
       </nav>
+
+      <section class="container section-header">
+        
+        
+  
+  
+      </section>
     </header>
-
-
 
   </body>
 </html>
