prima section completa con immagine all'interno

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </nav>
 
       <section class="container section-header">
-        
+        <div class="image-container"></div>
         
   
   
