creazioni restanti section

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 
       <section class="container section-header">
         <div class="image-container"></div>
-        
-  
-  
       </section>
     </header>
+
+    <section class="container section color-one"></section>
+    <section class="container section color-two"></section>
+    <section class="container section color-one"></section>
+    <section class="container section color-two"></section>
 
   </body>
 </html>
