seconda section completa

--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@
       </section>
     </header>
 
-    <section class="container section color-one"></section>
-    <section class="container section color-two"></section>
-    <section class="container section color-one"></section>
-    <section class="container section color-two"></section>
+    <section class="section color-one">
+
+      <div class="container section-container">
+        <div class="container-element-one"></div>
+        <div class="container-element-two"></div>
+      </div>
+
+    </section>
+    <section class="section color-two"></section>
+    <section class="section color-one"></section>
+    <section class="section color-two"></section>
 
   </body>
 </html>
