--- a/index.html
+++ b/index.html
@@ -42,9 +42,29 @@
       </div>
 
     </section>
-    <section class="section color-two"></section>
-    <section class="section color-one"></section>
-    <section class="section color-two"></section>
+    <section class="section color-two">
+
+      <div class="container section-container">
+        <div class="container-element-oneInv"></div>
+        <div class="container-element-twoInv"></div>
+      </div>
+
+    </section>
+
+    <section class="section color-one">
+
+      <div class="container section-container">
+        <div class="container-element-one"></div>
+        <div class="container-element-two"></div>
+      </div>
+
+    </section>
+    
+    <section class="section-big color-two">
+      <div class="container section-container">
+        <div class="container-big-element"></div>
+      </div>
+    </section>
 
   </body>
 </html>
