--- a/index.html
+++ b/index.html
@@ -66,5 +66,12 @@
       </div>
     </section>
 
+    <footer class="footer">
+
+      <div></div>
+      <div></div>
+
+    </footer>
+
   </body>
 </html>
