--- a/index.html
+++ b/index.html
@@ -68,8 +68,26 @@
 
     <footer class="footer">
 
-      <div></div>
-      <div></div>
+      <div class="upper-footer container">
+        <div class="info-container sx"></div>
+        <div class="info-container dx">
+          <div class="sub-info-container"></div>
+          <div class="sub-info-container"></div>
+          <div class="sub-info-container"></div>
+          <div class="sub-info-container"></div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="low-footer container">
+
+          <div class="end-container">
+            <img src="./img/favicon.ico" alt="logo" class="end-item">
+            <button class="end-item">Bottone</button>
+          </div>
+
+      </div>
 
     </footer>
 
