--- a/index.html
+++ b/index.html
@@ -34,37 +34,39 @@
       </section>
     </header>
 
-    <section class="section color-one">
+    <main class="main">
+      <section class="section">
 
-      <div class="container section-container">
-        <div class="container-element-one"></div>
-        <div class="container-element-two"></div>
-      </div>
+        <div class="container section-container">
+          <div class="container-element-one"></div>
+          <div class="container-element-two"></div>
+        </div>
 
-    </section>
-    <section class="section color-two">
+      </section>
+      <section class="section">
 
-      <div class="container section-container">
-        <div class="container-element-oneInv"></div>
-        <div class="container-element-twoInv"></div>
-      </div>
+        <div class="container section-container inverted">
+          <div class="container-element-one"></div>
+          <div class="container-element-two"></div>
+        </div>
 
-    </section>
+      </section>
 
-    <section class="section color-one">
+      <section class="section">
 
-      <div class="container section-container">
-        <div class="container-element-one"></div>
-        <div class="container-element-two"></div>
-      </div>
+        <div class="container section-container">
+          <div class="container-element-one"></div>
+          <div class="container-element-two"></div>
+        </div>
 
-    </section>
-    
-    <section class="section-big color-two">
-      <div class="container section-container">
-        <div class="container-big-element"></div>
-      </div>
-    </section>
+      </section>
+      
+      <section class="section big">
+        <div class="container section-container">
+          <div class="container-big-element"></div>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer">
 
